css/header-footer-style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Roboto", sans-serif;
}

body {
  width: 100vw;
  height: 100vh;
}

/* HEADER ***************/
header {
  width: 100vw;
  height: 7vh;
  background: #dfe2cf;
}
nav {
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: space-around;
}
#home {
  text-align: center;
  font-size: 1.2rem;
  font-weight: bold;
  width: 40%;
}

.header-nav {
  background: #dfe2cf;
  flex-direction: column;
  align-items: center;
  display: flex;
  width: 50%;
  height: 100%;
  position: absolute;
  top: 7vh;
  right: 0;
  transform: translateX(100%);
  transition: transform 0.5s ease-in;
  z-index: 10;
}

li {
  display: flex;
  align-items: center;
  list-style: none;
  text-align: center;
  font-size: 1.2rem;
  font-weight: bold;
  height: 20%;
  opacity: 0;
  display: block;
}
a {
  text-decoration: none;
  color: black;
}

ul li a {
  border-bottom: 1px solid #ff7477;
}

#burger {
  cursor: pointer;
  padding: 15px;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}
#burger #line1,
#burger #line2,
#burger #line3 {
  margin: 5px;
  width: 25px;
  height: 3px;
  background: #ff7477;
  transition: all 0.3s;
}
.nav-activate {
  transform: translateX(0%);
}

@keyframes navLinkFade {
  from {
    opacity: 0;
    transform: translateX(50px);
  }
  to {
    opacity: 1;
    transform: translateX(0);
  }
}

@media screen and (min-width: 600px) {
  .header-nav {
    position: inherit;
    display: flex;
    align-items: center;
    flex-direction: row;
    justify-content: space-around;
    height: 100%;
    transform: translateX(0%);
  }
  ul li a {
    border-bottom: none;
  }
  .header-nav li:hover {
    font-size: 1.3rem;
    transition: 0.3s;
  }

  #home a:hover {
    font-size: 1.55rem;
    transition: 0.2s;
  }

  .header-nav li {
    opacity: 1;
  }
  #burger {
    display: none;
  }
}

#main-container {
  min-height: 97vh;
  width: 100vw;
  overflow: hidden;
  position: relative;
}

footer {
  z-index: -1;
}
footer p {
  font-size: 0.5rem;
  width: 100vw;
  height: 3vh;
  padding-top: 1vh;
  background-color: #000;
  text-align: right;
  color: #fff;
}

